# RSS-Evaluation-selection

./: .flake8  .gitignore  Install.m9.bat  Install.m9.sh  README.md  examples-nested.bat  examples-nested.sh  examples.bat  examples.sh  noxfile.py  one_full_example.bat  one_full_example.sh  pyproject.toml  run-mlflow-server.bat  run-mlflow-server.sh
.github/workflows/: checks.yml  python-app.yml
src/rss9module/: data.py  pipeline.py  train.py
test/: test_all.py
