[tool.poetry]
name = "rss9module"
version = "0.1.0"
description = ""
authors = ["Dmitry Gluzdov <Dmitry@Gluzdov.ru>"]

[tool.poetry.scripts]
train = "src.rss9module.train:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "^1.4.2"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
